--- a/libro-app/src/app/app.html
+++ b/libro-app/src/app/app.html
@@ -1,3 +1,2 @@
-<app-cliente></app-cliente>
-<app-autor></app-autor>
-<app-categoria></app-categoria>
+<!-- <app-cliente></app-cliente> -->
+<app-libro></app-libro>
