--- a/libro-app/src/app/components/carrito/carrito.html
+++ b/libro-app/src/app/components/carrito/carrito.html
@@ -33,12 +33,12 @@
             <th mat-header-cell *matHeaderCellDef>Cantidad</th>
             <td mat-cell *matCellDef="let it">
                 <div class="qty">
-                    <button mat-mini-fab (click)="updateCantidad(it.idCarritoItem!, it.Cantidad-1)">
+                    <button mat-mini-fab (click)="updateCantidad(it.idCarritoItem!, it.cantidad - 1)">
                         <mat-icon>remove</mat-icon>
                     </button>
-                    <input matInput type="number" min="0" value="it.cantidad"
+                    <input matInput type="number" min="0" [value]="it.cantidad"
                         (change)="updateCantidad(it.idCarritoItem!, $any($event.target).valueAsNumber)">
-                    <button mat-mini-fab color="primary" (click)="updateCantidad(it.idCarritoItem!, it.Cantidad + 1)">
+                    <button mat-mini-fab color="primary" (click)="updateCantidad(it.idCarritoItem!, it.cantidad + 1)">
                         <mat-icon>add</mat-icon>
                     </button>
                 </div>
@@ -65,8 +65,8 @@
         <div><span>Impuestos:</span><strong>{{carrito.impuestos | currency: 'USD'}}</strong></div>
         <div class="grand"><span>Total:</span><strong>{{carrito.total | currency: 'USD'}}</strong></div>
         <div class="acciones">
-            <button mat-stroked-button color="warn" (click)="clear">Vaciar</button>
-            <button mat-raised-button color="primary" (click)="checkout">Pagar</button>
+            <button mat-stroked-button color="warn" (click)="clear()">Vaciar</button>
+            <button mat-raised-button color="primary" (click)="checkout()">Pagar</button>
         </div>
     </div>
 </div>
